# studies

./: .gitignore  .repos-cli.toml.example  README.md
GlucoApp/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
GlucoApp/app/: build.gradle.kts
GlucoApp/gradle/: libs.versions.toml
algo_lib/: README.md  main_test
algo_lib/tests/: main_test.cpp  test_algorithms.hpp  test_datastructures.hpp  test_sorting.hpp
dir_aod/: README.md  z1.cpp  z2.cpp
dir_concurrent/: README.md
dir_concurrent/dir_cpp/: README.md  costumer_service.cpp  parallel_transform.cpp  thread_qs.cpp
dir_concurrent/dir_cpp/game_of_life/: CMakeLists.txt  main.cpp
dir_concurrent/dir_go/: README.md
dir_java/: README.md
dir_java/PascalTriangleVisualizer/: Main.java  README.md
dir_java/gui/: README.md
dir_java/javaSimplePaint/: README.md  pom.xml
dir_java/javafxPascalTriangle/: README.md  pom.xml
dir_java/server/: README.md  Server.java  Threat.java  Tree.java  client.java
dir_java/shapeCalculator/: README.md
dir_jfft/: README.md
dir_jfft/1/: FA  FA.cpp  KMP  KMP.cpp  README.md  kmp_program  test.txt
dir_jfft/2/: README.md
dir_kkd/: README.md
dir_kkd/1/: README.md  entropy_analyzer  entropy_analyzer.rs
dir_kkd/2/: README.md  arithmetic_coder.cpp  coder  pt.compressed  test1.compressed  test3.compressed
dir_kkd/3/: CMakeLists.txt  README.md  main.cpp
dir_on/: README.md
dir_prob/: README.md
dir_prob/BallsAndBins/: CMakeLists.txt  README.md  results.txt
dir_prob/BallsAndBins/src/implementationCpp/: experiment.cpp  experiment2.cpp  file_operations.cpp  main.cpp
dir_prob/BallsAndBins/src/implementationCpp/headers/: experiment.h  experiment2.h  file_operations.h
dir_prob/BallsAndBins/src/implementationPy/: plot.py  plot2.py
dir_prob/BallsAndBins/to_plot/: comm_interference_results1.txt  comm_interference_results2.txt  insertion_sort_results.txt  max_load_results1.txt  max_load_results2.txt
dir_prob/MonteCarlo/: CMakeLists.txt  README.md  main.cpp  random.h
dir_rust/: README.md
dir_rust/pattern_search/: Cargo.toml  README.md
dir_rust/pattern_search/src/: cli.rs  engine.rs  lib.rs  main.rs
dir_rust/pattern_search/tests/: cli.rs
dir_rust/queue_system/: Cargo.toml  README.md
dir_rust/queue_system/src/: main.rs  qr.rs  queue.rs  scanner.rs  ui.rs
dir_scripts/: README.md
(+191 files in other folders)
