[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"
authors = ["unseen2004"]
description = "Fast, idiomatic Rust grep-like CLI with streaming IO and rich flags"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.1"
env_logger = "0.11"
exitcode = "1.1"
human-panic = "1.2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"